[package]
name = "vh"
version = "0.1.0"
authors = ["Lucian BLETAN <neuraluc@gmail.com>"]
edition = "2024"
description = "VHost manager for local development."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/vh"
homepage = "https://github.com/gni/vh"
repository = "https://github.com/gni/vh"
categories = ["command-line-utilities", "development-tools"]
keywords = ["vhost", "ssl", "local-dev", "certificates", "cli"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
libc = "0.2.184"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"